fix: even spacing in ticket

--- a/frontend/src/components/Ticket/ticket.scss
+++ b/frontend/src/components/Ticket/ticket.scss
@@ -80,7 +80,7 @@
 						position: absolute;
 						height: 14px;
 						width: 1px;
-						margin-left: -8px;
+						margin-left: -13px;
 						margin-top: 1px;
 						background: $clr-neutral-5;
 					}
